@@ -1,3 +1,0 @@
-{% extends "templates/photologue/gallery_archive.html" %}
-
-{% block gallery-photo-class %}img-polaroid{% endblock %}
