@@ -1,3 +1,0 @@
-{% extends "templates/photologue/tags/prev_in_gallery.html" %}
-
-{% block img-class %}img-polaroid{% endblock %}
