@@ -1,0 +1,23 @@
+{% extends "photologue/root.html" %}
+{% load url from future %}
+
+{% block title %}{{ object.title }}{% endblock %}
+
+{% block content %}
+
+	<h1>{{ object.title }}</h1>
+	{% if object.description %}<p>{{ object.description }}</p>{% endif %}
+	<p class="muted"><small>Published {{ object.date_added }}</small></p>
+	<ul class="thumbnails">
+		{% for photo in object.public %}
+			<li class="{% block photologue-gallery-li-class %}span3{% endblock %}">
+				<a href="{{ photo.get_absolute_url }}" class="thumbnail">
+					<img src="{{ photo.get_thumbnail_url }}" alt="{{ photo.title }}">
+				</a>
+			</li>
+		{% endfor %}
+	</ul>
+
+	<p><a href="{% url 'pl-gallery-list' 1 %}">View all galleries</a></p>
+
+{% endblock %}
